# flash_drivers_rt1052

./: .gitignore  CMakeLists.txt  README.md  imxrt.cfg
cmake/: toolchain.cmake  version.cmake
src/MIMXRT1052/gcc/: startup_mimxrt1052.c.bak
src/common/: FLASHPluginCommon.cpp
src/imxrt/IMXRT1050_QSPIFLASH_ROMAPI/: FLASHPluginConfig.h  MIMXRT1052xxxxx_ram.ld  board.h  clock_config.c  main.cpp  pin_mux.c
